# grpc_poc

./: .gitignore  README.md  main.py  pyproject.toml
grpc_django/: Dockerfile  docker-compose.yml  pyproject.toml
grpc_django/greeting_services/: manage.py
grpc_django/greeting_services/greeting_services/: urls.py  wsgi.py
grpc_django/greeting_services/grpc/pb/: application_pb2.py  application_pb2_grpc.py
grpc_django/greeting_services/grpc/protos/: application.proto
grpc_django/greeting_services/hello/: urls.py  views.py
grpc_django/greeting_services/pb/: application_pb2.py  application_pb2_grpc.py
grpc_django/greeting_services/protos/: application.proto
grpc_django/src/greeting_services/: asgi.py  settings.py  urls.py
grpc_django/src/grpc_client/: client.py
grpc_django/src/hello/: views.py
grpc_fastapi/: Dockerfile.app  Dockerfile.grpc  docker-compose.yml  main.py  pyproject.toml  readme.md
grpc_fastapi/pb/: application_pb2_grpc.py  sample_pb2.py  sample_pb2_grpc.py
grpc_fastapi/protos/: sample.proto
grpc_fastapi/src/app/: main.py
grpc_fastapi/src/grpc_fastapi/: grpc_server.py
grpc_fastapi/src/grpc_fastapi/protos/: application.proto
nginx-proxy/: docker-compose.yml
nginx-proxy/docker/: nginx.conf  nginx.dockerfile
observability/: docker-compose.yml
observability/loki/: Dockerfile.loki  config.yml
observability/prometheus/: Dockerfile.prometheus  prometheus-entrypoint.sh  prometheus.yml  prometheus.yml.template
observability/promtail/: Dockerfile.promtail  config.yml
