[project]
name = "grpc-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0.4",
    "grpc-interceptor>=0.15.4",
    "grpcio-tools>=1.68.1",
    "grpcio>=1.68.1",
    "granian>=1.7.2",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    "python-json-logger>=3.2.1",
]
